# utils

./: CMakeLists.txt  README.md
EigenTools/: convertorVector.hpp  getMinMax.hpp  sparceICP.h  sparse.hpp  variance.hpp
IO/: folderChecks.hpp  folderListFiles.hpp  readCSV.hpp  readPLY.hpp  writeCSV.hpp
include/utils/IO/: folderChecks.h  folderListFiles.h  readCSV.h  readGraphOBJ.h  readPLY.h  readPNG.h  readSTL.h  stb_image_write.h  structures.h  tinyply.h  writeCSV.h  writeGraphOBJ.h  writePLY.h  writePNG.h
include/utils/IO_libIGL/: list_to_matrix.h  max_size.h  min_size.h  ply.h  readOBJ.h  readOFF.h  readPLY.h  readSTL.h  writeOBJ.h  writeOFF.h
include/utils/STDTools/: sgn.h
include/utils/cloud/: centering.h  downsampling.h  embeddedDeformation.h  embeddedDeformationOPtions.h  optimalTransform.h  poissonReconstruction.h  scaleWithSVD.h
include/utils/clouds/: centering.h
include/utils/convertors/: cgal_typedef.h  from_pcl.h  igl_to_cgal.h  to_pcl.h
include/utils/eigenTools/: boolean_slice.h  boolean_tests.h  concatenate.h  convertorVector.h  getMinMax.h  nanoflann.h  nanoflannWrapper.h  reduce.hpp  removeCol.h  removeRow.h  sparse.h  sparseICP.h  standardDeviation.h  toVector.hpp  unique.h  variance.h
include/utils/graph/: graph.h  graphOptions.h
include/utils/mesh/: computeFacesCentroids.h  computeGeometricalProperties.h  computeNormals.h  deleteVertices.h  downsampling.h  fillHoles.h  greedySearch.h  nonRigidDeformation.h  raycasting.h
include/utils/visualization/: correspondences.h  matplotlibcpp.h  plotCloud.h  plotGraph.h  plotMesh.h  plotTwoMeshes.h  polyscopeWrapper.h  sourceAndTarget.h
matlab/write_graph_to_obj/: demo.m  write_graph_to_obj.m  write_graph_to_obj.m~
mesh/: compute_normals_from_mesh.hpp  greedySearch.cpp  greedySearch.hpp
sample/: CMakeLists.txt  setup.sh
sample/app/: app_batch_sample.cpp  app_sample.cpp
src/IO/: folderListFiles.cpp
src/cloud/: downsampling.cpp  embeddedDeformation.cpp  poissonReconstruction.cpp
src/convertors/: igl_to_cgal.cpp
src/eigenTools/: unique.cpp
src/mesh/: computeGeometricalProperties.cpp  computeNormals.cpp  greedySearch.cpp  nonRigidDeformation.cpp
visualization/: source_and_target.hpp
